--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="skill_category">Langages back-end :</div>
                 <div><img class="icon" src="images/icons/languages/back/php.png">php, <img class="icon" src="images/icons/languages/back/java.png">java, <img class="icon" src="images/icons/languages/back/python.png">python</div>
                 <div class="skill_category">Langages front-end : </div>
-                <div><img class="icon" src="images/icons/languages/front/html.png">HTML, <img class="icon" src="images/icons/languages/front/css.png">CSS, <img class="icon" src="images/icons/languages/front/js.png">javascript, <img class="icon" src="images/icons/languages/front/ts.png">typescript</div>
+                <div><img class="icon" src="images/icons/languages/front/html.png">HTML, <img class="icon" src="images/icons/languages/front/css.png">CSS, <img class="icon" src="images/icons/languages/front/js.png">javascript, <div><img class="icon" src="images/icons/languages/front/ts.png">typescript</div></div>
             </div>
             <h3>Frameworks</h3>
             <div>
@@ -34,7 +34,6 @@
                 <div><img class="icon" src="images/icons/framework/react.png">React, <img class="icon" src="images/icons/framework/vuejs.png">VueJS, <img class="icon" src="images/icons/framework/angular.png">Angular</div>
             </div>
         </div>
-        <hr>
         <div class="personnal_informations">
             <h3>Informations personnelles</h3>
             <div class="information_row"><div class="icon_wrapper"><img class="icon" src="images/icons/information/birthday.png"></div> 22 ans</div>
@@ -45,16 +44,27 @@
             <div class="information_row"><div class="icon_wrapper"><img class="icon" src="images/icons/information/tel.png"></div> 06 80 18 92 87</div>
             <div class="information_row"><div class="icon_wrapper"><img class="icon" src="images/icons/tools/github.png"></div> <a href="github.com/JRLapierre">github.com/JRLapierre</a></div>
         </div>
+        <div>
+            <h3>Loisirs</h3>
+            <div class="icons_hobbies">
+                <img class="hobby_icon" src="images/icons/hobbies/bike.png">
+                <img class="hobby_icon" src="images/icons/hobbies/walk.png">
+                <img class="hobby_icon" src="images/icons/hobbies/music.png">
+                <img class="hobby_icon" src="images/icons/hobbies/book.png">
+                <img class="hobby_icon" src="images/icons/hobbies/writting.png">
+                <img class="hobby_icon" src="images/icons/hobbies/programation.png">
+            </div>
+        </div>
     </div>
     <div class="main_body">
         <div class="category colored_area">
             <h2>Formations</h2>
             <div class="item">
-                <div class="title_row"><div>BUT informatique</div><div class="date">2021-2024</div></div>
-                parcours développement d'applications
+                <div class="title_row"><div>Licence 3 informatique</div><div class="date">2025-Aujourd'hui</div></div>
             </div>
             <div class="item">
-                <div class="title_row"><div>Licence 3 informatique</div><div class="date">2025-Aujourd'hui</div></div>
+                <div class="title_row"><div>BUT informatique</div><div class="date">2021-2024</div></div>
+                parcours développement d'applications
             </div>
         </div>
         <div class="category">
@@ -87,28 +97,27 @@
                 <p>- Création d'un site professionnel pour une coach de vie</p>
                 <p>- Travail indépendant</p>
                 <p>- Langages : <img class="icon" src="images/icons/languages/back/php.png">php, <img class="icon" src="images/icons/languages/front/js.png">JavaScript, <img class="icon" src="images/icons/languages/front/html.png">HTML, <img class="icon" src="images/icons/languages/db/sql.png">SQL</p>
+                <p>- Frameworks : <img class="icon" src="images/icons/framework/react.png">React</p>
                 <p>- Outils : <img class="icon" src="images/icons/tools/git.png">git</p>
                 <p>- Code : <img class="icon" src="images/icons/tools/github.png"><a href="https://github.com/JRLapierre/avancer-avec.fr">github.com/JRLapierre/avancer-avec.fr</a></p>
             </div>
             <hr>
             <div class="item">
-                <div class="title_row"><div>Création du projet "Evolution2"</div><div class="date">Août 2023-Mars 2024</div></div>
-                <p>- Modélisation de réseaux de neurones et implémentation d'algorithmes de sélection</p>
+                <div class="title_row"><div>Projet "Evolution2"</div><div class="date">Août 2023-Mars 2024</div></div>
+                <p>- Version plus structurée et optimisée de "Evolution1", avec des fonctionnalités en plus</p>
+                <p>- Projet personnel</p>
+                <p>- Langages : <img class="icon" src="images/icons/languages/back/java.png">Java</p>
+                <p>- Outils : <img class="icon" src="images/icons/tools/git.png">git, <img class="icon" src="images/icons/tools/gradle.png">gradle</p>
+                <p>- Code : <img class="icon" src="images/icons/tools/github.png"><a href="https://github.com/JRLapierre/Evolution2">github.com/JRLapierre/Evolution2</a></p>
+            </div>
+            <hr>
+            <div class="item">
+                <div class="title_row"><div>Projet "Evolution1"</div><div class="date">Novembre 2022-Avril 2023</div></div>
+                <p>- Modélisation de réseaux de neurones et implémentation d'algorithmes de sélection en recréant des outils de base</p>
                 <p>- Projet personnel</p>
                 <p>- Langages : <img class="icon" src="images/icons/languages/back/java.png">Java</p>
                 <p>- Outils : <img class="icon" src="images/icons/tools/git.png">git</p>
-                <p>- Code : <img class="icon" src="images/icons/tools/github.png"><a href="https://github.com/JRLapierre/Evolution2">github.com/JRLapierre/Evolution2</a></p>
-            </div>
-        </div>
-        <div class="category">
-            <h2>Loisirs</h2>
-            <div class="icons_hobbies">
-                <img class="hobby_icon" src="images/icons/hobbies/bike.png">
-                <img class="hobby_icon" src="images/icons/hobbies/walk.png">
-                <img class="hobby_icon" src="images/icons/hobbies/music.png">
-                <img class="hobby_icon" src="images/icons/hobbies/book.png">
-                <img class="hobby_icon" src="images/icons/hobbies/writting.png">
-                <img class="hobby_icon" src="images/icons/hobbies/programation.png">
+                <p>- Code : <img class="icon" src="images/icons/tools/github.png"><a href="https://github.com/JRLapierre/Evolution1">github.com/JRLapierre/Evolution1</a></p>
             </div>
         </div>
     </div>
