ajout docker et softskills

--- a/index.html
+++ b/index.html
@@ -15,23 +15,26 @@
             Développeur full stack
         </div>
         <div class="skills">
-            <h3>Langages</h3>
+            <h3>Compétences techniques</h3>
             <div>
                 <div class="skill_category">DevOps : </div>
-                <div><img class="icon" src="images/icons/tools/git.png">git, <img class="icon" src="images/icons/languages/bash.png">bash</div>
+                <div><img class="icon" src="images/icons/tools/git.png">git, <img class="icon" src="images/icons/languages/bash.png">bash, <img class="icon" src="images/icons/tools/docker.png">docker</div>
                 <div class="skill_category">Base de données : </div>
                 <div><img class="icon" src="images/icons/languages/db/sql.png">sql, <img class="icon" src="images/icons/languages/db/mongodb.png">MongoDB</div>
                 <div class="skill_category">Langages back-end :</div>
                 <div><img class="icon" src="images/icons/languages/back/php.png">php, <img class="icon" src="images/icons/languages/back/java.png">java, <img class="icon" src="images/icons/languages/back/python.png">python</div>
                 <div class="skill_category">Langages front-end : </div>
                 <div><img class="icon" src="images/icons/languages/front/html.png">HTML, <img class="icon" src="images/icons/languages/front/css.png">CSS, <img class="icon" src="images/icons/languages/front/js.png">javascript, <div><img class="icon" src="images/icons/languages/front/ts.png">typescript</div></div>
-            </div>
-            <h3>Frameworks</h3>
-            <div>
                 <div class="skill_category">Frameworks back :</div>
                 <div><img class="icon" src="images/icons/framework/laravel.png">Laravel, <img class="icon" src="images/icons/framework/Synphony.png">Synphony, <img class="icon" src="images/icons/framework/spring.png">Spring</div>
                 <div class="skill_category">Frameworks front :</div>
                 <div><img class="icon" src="images/icons/framework/react.png">React, <img class="icon" src="images/icons/framework/vuejs.png">VueJS, <img class="icon" src="images/icons/framework/angular.png">Angular</div>
+            </div>
+        </div>
+        <div class="skills">
+            <h3>Soft skills</h3>
+            <div>
+                <p> 👥 Esprit d’équipe</p><p>🎨 Créativité</p><p>🔎 Esprit critique</p>
             </div>
         </div>
         <div class="personnal_informations">
